Update location and constraints descriptions

--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
             {
                 titre: "Baby-sitter professionnel",
                 emoji: "🌙",
-                lieu: "Domicile",
+                lieu: "Maison = lieu de travail",
                 categorie: "domicile",
                 description: "Garde ponctuelle d'enfants à domicile (soirées, week-ends). Le CAP AEPE apporte une vraie crédibilité professionnelle.",
                 codeRome: "K1303",
@@ -708,7 +708,7 @@
             {
                 titre: "Auxiliaire parental",
                 emoji: "👨‍👩‍👧‍👦",
-                lieu: "Domicile",
+                lieu: "Maison = lieu de travail",
                 categorie: "domicile",
                 description: "Intervient au domicile pour garder les enfants, gérer les routines quotidiennes, aide aux devoirs et activités. Relation privilégiée avec une famille.",
                 codeRome: "K1303",
@@ -774,7 +774,7 @@
             {
                 titre: "Garde d'enfants en horaires atypiques",
                 emoji: "🌙",
-                lieu: "Domicile",
+                lieu: "Maison = lieu de travail",
                 categorie: "domicile",
                 description: "Garde d'enfants tôt le matin, tard le soir, nuits ou week-ends pour parents avec horaires décalés (soignants, hôtellerie, sécurité).",
                 codeRome: "K1303",
@@ -827,7 +827,7 @@
                 contrat: "CDI/CDD, Fonctionnaire (municipal)",
                 salaire: "SMIC à 1 700€/mois",
                 avantages: ["Travail en équipe", "Formation continue", "Stabilité emploi", "Évolution carrière"],
-                contraintes: ["Gestion de groupe", "Rythme soutenu", "Règlement strict"]
+                contraintes: ["Gestion de groupe", "Rythme soutenu", "Protocoles à respecter"]
             },
             {
                 titre: "Micro-crèche",
@@ -838,7 +838,7 @@
                 contrat: "CDI/CDD",
                 salaire: "SMIC à 1 600€/mois",
                 avantages: ["Ambiance familiale", "Polyvalence", "Autonomie", "Petit groupe"],
-                contraintes: ["Équipe réduite", "Polyvalence obligatoire"]
+                contraintes: ["Équipe réduite", "Soins + ménage + animation"]
             },
             {
                 titre: "Multi-accueil",
@@ -871,7 +871,7 @@
                 contrat: "CDD, temps partiel",
                 salaire: "SMIC horaire",
                 avantages: ["Diversité enfants", "Pas de routine"],
-                contraintes: ["Turn-over constant", "Temps partiel", "Instabilité"]
+                contraintes: ["Enfants différents chaque jour", "Temps partiel", "Horaires courts"]
             },
             {
                 titre: "Jardin d'enfants",
@@ -882,7 +882,7 @@
                 contrat: "CDI/CDD",
                 salaire: "SMIC à 1 600€/mois",
                 avantages: ["Projet pédagogique riche", "2-6 ans", "Éducation plus que soins"],
-                contraintes: ["Structures rares", "Compétences éducatives"]
+                contraintes: ["Structures rares", "Niveau éducatif élevé demandé"]
             },
             {
                 titre: "École maternelle (ATSEM)",
@@ -893,7 +893,7 @@
                 contrat: "Fonction publique (CONCOURS)",
                 salaire: "1 600€ à 1 900€/mois",
                 avantages: ["Sécurité emploi", "Vacances scolaires", "Horaires réguliers", "Évolution"],
-                contraintes: ["Concours sélectif", "Moins d'autonomie", "Entretien inclus"]
+                contraintes: ["Concours sélectif", "Moins d'autonomie", "Ménage de la classe"]
             },
             {
                 titre: "Accueil périscolaire",
@@ -904,7 +904,7 @@
                 contrat: "CDD, temps partiel",
                 salaire: "SMIC horaire",
                 avantages: ["Activités ludiques", "Pas de pression scolaire"],
-                contraintes: ["Horaires fractionnés", "Temps partiel", "Salaire limité"]
+                contraintes: ["Horaires coupés (7h-9h puis 16h-19h)", "Temps partiel", "Salaire limité"]
             },
             {
                 titre: "Assistante maternelle agréée",
@@ -915,7 +915,7 @@
                 contrat: "Indépendant (AGRÉMENT PMI)",
                 salaire: "1 200€ à 2 000€/mois (variable)",
                 avantages: ["Autonomie totale", "Chez soi", "Relation privilégiée", "Revenus intéressants"],
-                contraintes: ["Statut indépendant", "Isolement", "Vie pro/perso", "Gestion admin"]
+                contraintes: ["Pas de congés payés garantis", "Seule toute la journée", "Maison = lieu de travail", "Paperasse administrative"]
             },
             {
                 titre: "Maison d'Assistantes Maternelles (MAM)",
@@ -926,7 +926,7 @@
                 contrat: "Indépendant (AGRÉMENT PMI)",
                 salaire: "Variable selon activité",
                 avantages: ["Mutualisation", "Équipe mais autonomie", "Rupture isolement"],
-                contraintes: ["Gestion collective local", "Entente nécessaire", "Statut indépendant"]
+                contraintes: ["Loyer du local à partager", "Bien s'entendre entre collègues", "Pas de congés payés garantis"]
             },
             {
                 titre: "Garde d'enfants à domicile",
@@ -937,7 +937,7 @@
                 contrat: "CDI/CDD, CESU",
                 salaire: "SMIC à 1 500€/mois",
                 avantages: ["Relation privilégiée", "Autonomie", "Pas d'investissement"],
-                contraintes: ["Un seul employeur", "Isolement", "Horaires atypiques"]
+                contraintes: ["Un seul employeur = risque", "Seule toute la journée", "Parfois soirs/week-ends"]
             },
             {
                 titre: "Centre de loisirs (ALSH)",
@@ -948,7 +948,7 @@
                 contrat: "CDD, saisonnier",
                 salaire: "SMIC à 1 500€/mois",
                 avantages: ["Activités ludiques", "Ambiance détendue", "Saisonnalité possible"],
-                contraintes: ["Contrats précaires", "Groupes importants", "Fatigue physique"]
+                contraintes: ["Contrats précaires (CDD)", "Beaucoup d'enfants", "Fatigue physique"]
             },
             {
                 titre: "Ludothèque",
@@ -959,7 +959,7 @@
                 contrat: "CDD/CDI temps partiel",
                 salaire: "SMIC, temps partiel",
                 avantages: ["Ambiance jeu", "Diversité publics", "Créativité"],
-                contraintes: ["Temps partiel", "Entretien matériel"]
+                contraintes: ["Temps partiel", "Ranger/nettoyer les jeux"]
             },
             {
                 titre: "PMI (Protection Maternelle Infantile)",
@@ -970,7 +970,7 @@
                 contrat: "Fonction publique territoriale",
                 salaire: "1 500€ à 1 800€/mois",
                 avantages: ["Mission prévention", "Relation individualisée", "Fonction publique"],
-                contraintes: ["Situations difficiles", "Déplacements"]
+                contraintes: ["Familles en difficulté parfois", "Déplacements à domicile"]
             },
             {
                 titre: "Maternité / Service pédiatrique",
@@ -981,7 +981,7 @@
                 contrat: "Fonction publique hospitalière",
                 salaire: "1 500€ à 1 800€/mois + primes",
                 avantages: ["Fonction publique", "Formation continue", "Expérience enrichissante"],
-                contraintes: ["Horaires décalés", "Situations lourdes", "Rythme intense"]
+                contraintes: ["Matin/après-midi/nuit", "Enfants malades", "Rythme intense"]
             },
             {
                 titre: "Crèche familiale",
@@ -992,7 +992,7 @@
                 contrat: "Salarié de crèche familiale",
                 salaire: "Variable selon enfants",
                 avantages: ["Domicile mais équipe", "Accompagnement directrice", "Regroupements", "Statut salarié"],
-                contraintes: ["Domicile", "Isolement relatif"]
+                contraintes: ["Maison = lieu de travail", "Seule au quotidien"]
             }
         ];
 
